--- a/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
+++ b/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
@@ -76,7 +76,7 @@ Within a few seconds you will see information about sends from the last day. Wit
 
 :::note You Should Know
 
-If you are running it from child Business Unit and do not see EmailAddress, BounceCount and Status, add `ENT.` prefix to `_Subscribers` Data View name in the last `JOIN`. It will pull the data from _Subscribers of parent Business Unit.
+If you are running it from child Business Unit and do not see EmailAddress, BounceCount and Status, add `Ent.` prefix to `_Subscribers` Data View name in the last `JOIN`. It will pull the data from _Subscribers of parent Business Unit.
 
 :::
 
