--- a/docs/sql/sfmc-sql-snippet-debugging-value-length.mdx
+++ b/docs/sql/sfmc-sql-snippet-debugging-value-length.mdx
@@ -54,7 +54,7 @@ SELECT MAX(LEN(c.Id))          AS SubscriberKey,
 
 :::note You Should Know
 
-If you are running those queries from the child Business Unit, add `ENT.` prefix to Synchronized Data Extension names, as those are stored on the parent level.
+If you are running those queries from the child Business Unit, add `Ent.` prefix to Synchronized Data Extension names, as those are stored on the parent level.
 
 :::
 
