Update to SQL Style Guide article and additional application of the style guide to other SQL articles

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -71,6 +71,7 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 - [Date Functions](./sql/sfmc-sql-date-functions.mdx)
 - [Numeric Functions](./sql/sfmc-sql-numeric-functions.mdx)
 - [Conversion Functions](./sql/sfmc-sql-conversion-functions.mdx)
+- [SQL Style Guide](./sql/sfmc-sql-style-guide.mdx)
 
 ### SQL Snippets
 
@@ -92,4 +93,4 @@ There are many things in Salesforce Marketing Cloud that aren't code but have a 
 
 ## Changes
 
-I'm updating the docs ongoingly, so expect changes. You can track those by watching and starring the website's [Github Repository](https://github.com/MateuszDabrowski/mateuszdabrowski.pl). Additional languages might come (I'm thinking about you, GTL).
+I'm updating the docs ongoingly, so expect changes. You can track those by watching and starring the website's [Github Repository](https://github.com/MateuszDabrowski/mateuszdabrowski.pl).
